plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'zzangmin'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.2.5'
	implementation 'org.springframework.boot:spring-boot-configuration-processor:3.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.5'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.5'
	testImplementation 'org.mockito:mockito-core:5.11.0'

	// aws sdk for java
	implementation 'software.amazon.awssdk:ssm:2.25.39'
	implementation 'software.amazon.awssdk:cloudwatch:2.25.39'
	implementation 'software.amazon.awssdk:rds:2.25.39'
	implementation 'software.amazon.awssdk:pi:2.25.39'
	implementation 'software.amazon.awssdk:secretsmanager:2.25.39'
	implementation 'software.amazon.awssdk:sts:2.25.39'
	implementation 'software.amazon.awssdk:core:2.25.39'

	implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'

	// slack
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'com.squareup.okhttp3:okhttp:4.10.0'
	implementation 'com.slack.api:slack-app-backend:1.38.3'
	implementation 'com.slack.api:slack-api-model:1.38.3'
	implementation 'com.slack.api:slack-api-client:1.38.3'


	// signature hex
	implementation 'commons-codec:commons-codec:1.15'

	// sql parser
	implementation 'com.github.jsqlparser:jsqlparser:4.9'

}

tasks.named('test') {
	useJUnitPlatform()
}

//def frontendDir = "$projectDir/src/main/frontend"
//
//sourceSets {
//	main {
//		resources { srcDirs = ["$projectDir/src/main/resources"]
//		}
//	}
//}
//
//processResources { dependsOn "copyReactBuildFiles" }
//
//
//task installReact(type: Exec) {
//	workingDir "$frontendDir"
//	inputs.dir "$frontendDir"
//	group = BasePlugin.BUILD_GROUP
//	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
//		commandLine "npm.cmd", "audit", "fix"
//		commandLine 'npm.cmd', 'install' }
//	else {
//		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
//	}
//}
//
//task buildReact(type: Exec) {
//	dependsOn "installReact"
//	workingDir "$frontendDir"
//	inputs.dir "$frontendDir"
//	group = BasePlugin.BUILD_GROUP
//	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
//		commandLine "npm.cmd", "run-script", "build"
//	} else {
//		commandLine "npm", "run-script", "build"
//	}
//}
//
//task copyReactBuildFiles(type: Copy) {
//	dependsOn "buildReact"
//	from "$frontendDir/build"
//	into "$projectDir/src/main/resources/static"
//}